fix: more test updates to run against Sofie
